Moved style files
1) Split out reset css from global styles
2) Moved global styles into their own directory

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Photo gallery of the Moses Family" />
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
@@ -9,8 +10,8 @@
 		<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel='stylesheet' href='/global.css'>
+		<link rel='stylesheet' href='/styles/reset.css'>
+		<link rel='stylesheet' href='/styles/global.css'>
 		<style>
 			#svelte {
 				height: 100%;
