--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<meta name="description" content="Photo gallery of the Moses Family" />
-
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+		
+		<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
