--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
 		<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
+		<link rel="manifest" href="manifest.json">
+
 		<style>
 			#svelte {
 				height: 100%;
@@ -20,5 +22,8 @@
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+		<noscript>
+			<p>This site requires JavaScript. Your browser does not support JavaScript or you've disabled it.</p>
+		</noscript>
 	</body>
 </html>
