--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 		<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
-		<link rel="manifest" href="manifest.json">
+		<link rel="manifest" href="/manifest.json">
 
 		<style>
 			#svelte {
