--- a/src/app.html
+++ b/src/app.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-		<meta name="description" content="Photo gallery of the Moses Family" />
-		
-		<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
-		<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
-		<link rel="manifest" href="/manifest.json">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+	<meta name="description" content="Photo gallery of the Moses Family" />
 
-		<style>
-			#svelte {
-				height: 100%;
-			}
-		</style>
+	<link rel="apple-touch-icon" href="%sveltekit.assets%/images/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="%sveltekit.assets%/images/favicons/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="%sveltekit.assets%/images/favicons/favicon-16x16.png" sizes="16x16">
+	<link rel="mask-icon" href="%sveltekit.assets%/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
-		%svelte.head%
-	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
-		<noscript>
-			<p>This site requires JavaScript. Your browser does not support JavaScript or you've disabled it.</p>
-		</noscript>
-	</body>
+	<link rel="manifest" href="%sveltekit.assets%/manifest.json">
+
+	<meta name="theme-color" content="#fff" />
+
+	<style>
+		#svelte {
+			height: 100%;
+		}
+	</style>
+
+	%sveltekit.head%
+</head>
+
+<body>
+	<div id="svelte" style="display: contents">%sveltekit.body%</div>
+	<noscript>
+		<p>This site requires JavaScript. Your browser does not support JavaScript or you've disabled it.</p>
+	</noscript>
+</body>
+
 </html>
