--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
         <meta name="description" content="Photo gallery of the Moses Family" />
-
+        <meta name="robots" content="noindex">
+        
         <link rel="apple-touch-icon" href="%sveltekit.assets%/images/favicons/apple-touch-icon.png" />
         <link rel="icon" type="image/png" href="%sveltekit.assets%/images/favicons/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="%sveltekit.assets%/images/favicons/favicon-16x16.png" sizes="16x16" />
