--- a/src/app.html
+++ b/src/app.html
@@ -24,7 +24,7 @@
         %sveltekit.head%
     </head>
 
-    <body>
+    <body data-sveltekit-preload-data="hover">
         <div id="svelte" style="display: contents">%sveltekit.body%</div>
         <noscript>
             <p>This site requires JavaScript. Your browser does not support JavaScript or you've disabled it.</p>
